혁규꺼 넣어보다 포기

--- a/src/style/DiyCategoryStyle.css
+++ b/src/style/DiyCategoryStyle.css
@@ -18,6 +18,11 @@
     height: 1.6em;
     border-radius: 4px;
 }
+.category-content{
+    border: 1px solid black;
+    padding: 8px;
+    margin: 8px;
+}
 .category-list li.selected:hover {
     background-color: #BBD8DC;
     color: white;
